--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,11 @@
       <artifactId>hibernate-validator</artifactId>
       <version>8.0.0.Alpha3</version>
     </dependency>
+    <dependency>
+      <groupId>jakarta.validation</groupId>
+      <artifactId>jakarta.validation-api</artifactId>
+      <version>2.0.2</version>
+    </dependency>
 
   </dependencies>
 
