--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,12 @@
       <artifactId>jakarta.validation-api</artifactId>
       <version>2.0.2</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
+    <dependency>
+      <groupId>org.postgresql</groupId>
+      <artifactId>postgresql</artifactId>
+      <version>42.3.6</version>
+    </dependency>
 
   </dependencies>
 
